--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
 </head>
 <body>
 <h1>English Hunt Home Page</h1>
-<a href="englishuntdest.html">Description</a>
-<a href="englishuntrules.html">Rules & Regulation</a>
-<a href="englishuntfaq.html">FAQ</a>
-
+<ul>
+<li><a href="englishuntdest.html">Description</a></li>
+<li><a href="englishuntrules.html">Rules & Regulation</a></li>
+<li><a href="englishuntfaq.html">FAQ</a></li>
+</ul>
+	
 <a href="englishuntcampus.html"> <img src="campus.jpg"> </a>
 <a href="englishuntlille.html"><img src ="lille.jpg"> </a>
 
