--- a/englishuntfaq.html
+++ b/englishuntfaq.html
@@ -7,13 +7,13 @@
 <body>
 <a href="englishuntmp.html">Home</a>
 <h1>Welcome to the faq page </h1>
-<ul> Question?
+<ol> Question?
 	<li>Answer?
-</ul>
+</ol>
 
-<ul> question 2?
+<ol> question 2?
 		<li>Answer 2
-</ul>
+</ol>
 <footer> Contact : </footer>
 </boddy>
 </html>
