--- a/englishuntrules.html
+++ b/englishuntrules.html
@@ -7,11 +7,11 @@
 <body>
 <a href="englishuntmp.html">Home</a>
 <h1>Welcome to the rules page </h1>
-<ul> Rules
+<ol> Rules
 	<li>Stay with people
 	<li>do ur thing
 	<li>blabla
-</ul>
+</ol>
 <footer> Contact : </footer>
 </boddy>
 </html>
