--- a/englishuntcampus.html
+++ b/englishuntcampus.html
@@ -11,6 +11,6 @@ PLACEHOLDER FOR AUDIO GUIDE
 <p> Location : CRL
 <p>Mission: Balba
 <p> <a href="ehformcampus.html">Form here </a> 
-<footer> Contact : </footer>
+<footer> Contact : englishhunt2019@gmail.com </footer>
 </boddy>
 </html>
