--- a/englishuntdest.html
+++ b/englishuntdest.html
@@ -9,6 +9,6 @@
 <h1>Welcome to the description page </h1>
 About us :
 <p>Gains : oral, be familiar with places, etc...
-<footer> Contact : </footer>
+<footer> Contact : englishhunt2019@gmail.com </footer>
 </boddy>
 </html>
