--- a/englishuntlille.html
+++ b/englishuntlille.html
@@ -11,6 +11,6 @@ PLACEHOLDER FOR AUDIO GUIDE
 <p> Location : Grand place
 <p>Mission: Balba
 <p> <a href="ehformlille.html">Form here </a> 
-<footer> Contact : </footer>
+<footer> Contact : englishhunt2019@gmail.com </footer>
 </boddy>
 </html>
