--- a/englishuntrules.html
+++ b/englishuntrules.html
@@ -12,6 +12,6 @@
 	<li>do ur thing
 	<li>blabla
 </ol>
-<footer> Contact : </footer>
+<footer> Contact : englishhunt2019@gmail.com </footer>
 </boddy>
 </html>
