--- a/englishuntcampus.html
+++ b/englishuntcampus.html
@@ -6,8 +6,16 @@
 </head>
 <body>
 <a href="englishuntmp.html">Home</a>
-<h1>You Chose Campus </h1>
-PLACEHOLDER FOR AUDIO GUIDE
+	<figure>
+    <figcaption>Audio guide:</figcaption>
+    <audio
+        controls
+        src="1 from the bridge to the bu.m4a">
+            Your browser does not support the
+            <code>audio</code> element.
+    </audio>
+</figure>
+
 <p> Location : CRL
 <p>Mission: Balba
 <p> <a href="ehformcampus.html">Form here </a> 
