--- a/englishuntcampus.html
+++ b/englishuntcampus.html
@@ -16,8 +16,8 @@
     </audio>
 </figure>
 
-<p> Location : CRL
-<p>Mission: Balba
+You have currently crossed the bridge and you are on campus. You can see the BU on your right. Once you enter the building take the stairs on your right and go to the second floor. When you exit the stairs,  turn left and then right. At the back of the BU you will find many ressources in English.
+
 <p> <a href="ehformcampus.html">Form here </a> 
 <footer> Contact : englishhunt2019@gmail.com </footer>
 </boddy>
