--- a/englishuntrules.html
+++ b/englishuntrules.html
@@ -6,56 +6,56 @@
 </head>
 <body>
 <a href="englishuntmp.html">Home</a>
-<p><span style="font-size: large;"><span lang="en-GB"><strong>Rules and Regulations:</strong></span></span></p>
-<p><span style="font-size: medium;"><span lang="en-GB">Please follow the given rules and regulations to fully enjoy the English HUNT.</span></span></p>
+	<p><h1>Rules and Regulations:</h1></p>
+<p>Please follow the given rules and regulations to fully enjoy the English HUNT.</p>
 <ol>
 <li>
-<p><span style="font-size: medium;"><span lang="en-GB">Open for University of Lille students only </span></span></p>
+<p>Open for University of Lille students only</p>
 </li>
 <li>
-<p><span style="font-size: medium;"><span lang="en-GB">Always carry your student ID anywhere you go</span></span></p>
+<p>Always carry your student ID anywhere you go</p>
 </li>
 <li>
-<p><span style="font-size: medium;"><span lang="en-GB">There is no time limit for the English Hunt but we advise you to do it within a day</span></span></p>
+<p>There is no time limit for the English Hunt but we advise you to do it within a day</p>
 </li>
 <li>
-<p><span style="font-size: medium;"><span lang="en-GB">English Hunt could be done individually or in a team </span></span></p>
+<p>English Hunt could be done individually or in a team </p>
 </li>
 <li>
-<p><span style="font-size: medium;"><span lang="en-GB">If you are doing it in a Team, please enter all the names of your teammates on the website</span></span></p>
+<p>If you are doing it in a Team, please enter all the names of your teammates on the website</p>
 </li>
 <li>
-<p><span style="font-size: medium;"><span lang="en-GB">Make sure that you answer the given questions ;)</span></span></p>
+<p><Make sure that you answer the given questions ;)</p>
 </li>
 </ol>
-<p lang="en-GB">&nbsp;</p>
+
 <ol>
 <li>
-<p><span style="font-size: medium;"><span lang="en-GB">Please do not run on campus grounds. </span></span></p>
+<p>Please do not run on campus grounds. </p>
 </li>
 <li>
-<p><span style="font-size: medium;"><span lang="en-GB">Please be careful while crossing the road, or while entering crowded places</span></span></p>
+<p>Please be careful while crossing the road, or while entering crowded places</p>
 </li>
 <li>
-<p><span style="font-size: medium;"><span lang="en-GB">Please keep an eye on your personal belongings </span></span></p>
+<p>Please keep an eye on your personal belongings </p>
 </li>
 <li>
-<p><span style="font-size: medium;"><span lang="en-GB">Please follow the rules and regulations instructed at a museum</span></span></p>
+<p>Please follow the rules and regulations instructed at a museum</p>
 </li>
 <li>
-<p><span style="font-size: medium;"><span lang="en-GB">If you are going to a bar, please make sure you have your National ID and please forbid consuming alcohol if you are Under 18.</span></span></p>
+<p>If you are going to a bar, please make sure you have your National ID and please forbid consuming alcohol if you are Under 18.</p>
 </li>
 <li>
-<p><span style="font-size: medium;"><span lang="en-GB">Do not mix drinking and driving!</span></span></p>
+<p>Do not mix drinking and driving!</p>
 </li>
 <li>
-<p><span style="font-size: medium;"><span lang="en-GB">Please do not forget to use a valid transport ticket (by il&eacute;via) while travelling</span></span></p>
+<p>Please do not forget to use a valid transport ticket (by il&eacute;via) while travelling</p>
 </li>
 <li>
-<p><span style="font-size: medium;"><span lang="en-GB">When entering certain public places/ tourist places, you will have to buy a ticket, so please show them your student ID for discount rates. </span></span></p>
+<p>When entering certain public places/ tourist places, you will have to buy a ticket, so please show them your student ID for discount rates.</p>
 </li>
 <li>
-<p><span style="font-size: medium;"><span lang="en-GB">Please note that, all the museums in Lille are free to the public on the 1</span></span><sup><span style="font-size: medium;"><span lang="en-GB">ST</span></span></sup><span style="font-size: medium;"><span lang="en-GB"> Sunday of each month and also, all the museums in Lille are free for residents in Lille, Hellemme and Lomme every Sunday (but you will have to show them proof with for ex a telephone bill, an EDF bill etc)</span></span></p>
+<p>Please note that, all the museums in Lille are free to the public on the 1ST Sunday of each month and also, all the museums in Lille are free for residents in Lille, Hellemme and Lomme every Sunday (but you will have to show them proof with for ex a telephone bill, an EDF bill etc)</p>
 </li>
 </ol>
 <footer> Contact : englishhunt2019@gmail.com </footer>
