--- a/englishuntcampus.html
+++ b/englishuntcampus.html
@@ -18,7 +18,89 @@
 
 You have currently crossed the bridge and you are on campus. You can see the BU on your right. Once you enter the building take the stairs on your right and go to the second floor. When you exit the stairs,  turn left and then right. At the back of the BU you will find many ressources in English.
 
-<p> <a href="ehformcampus.html">Form here </a> 
+<form>
+	<input type="radio" name ="ques3c" value="3rep1c" checked> Answer 1
+	<input type="radio" name ="ques3c" value="3rep2c" > Answer 2
+	<input type="radio" name ="ques3c" value="3rep3c" > Answer 3
+	</form>
+	
+	  <audio
+        controls
+        src="2.mp3">
+            Your browser does not support the
+            <code>audio</code> element.
+    </audio>
+	
+Now you are currently outside the main library. On to your right, you can see an A on the building. Just before entering this building take the doors on to your left , and then, once you enter the building, you will see the Kino, which is the campus cinema . Then turn left and at the end of this hall there will be yellow  stairs. Go to the second floor. You will arrive in A4. When you leave the stairs turn right. At the end of the corridor you will find the association Ulysse (room A4.095)
+
+<form>
+	<input type="radio" name ="ques3c" value="3rep1c" checked> Answer 1
+	<input type="radio" name ="ques3c" value="3rep2c" > Answer 2
+	<input type="radio" name ="ques3c" value="3rep3c" > Answer 3
+	</form>
+	
+	  <audio
+        controls
+        src="3.mp3">
+            Your browser does not support the
+            <code>audio</code> element.
+    </audio>
+	
+You are currently in front of Ulysse, take the corridor on your right then turn left. At the end of the corridor, take the pink stairs and go down to level A1. Once you are below the stairs take the perpendicular corridor on your right. Exceed the long corridor with all the windows and the yellow doors and take the second intersection, which is marked by a little white sign with the wifi symbol on the right hand corner. At this intersection, take the corridor on the left. The pôle Delang is the 6th doors on your right.
+	
+<form>
+	<input type="radio" name ="ques3c" value="3rep1c" checked> Answer 1
+	<input type="radio" name ="ques3c" value="3rep2c" > Answer 2
+	<input type="radio" name ="ques3c" value="3rep3c" > Answer 3
+	</form>
+	
+	
+	  <audio
+        controls
+        src="4.mp3">
+            Your browser does not support the
+            <code>audio</code> element.
+    </audio>
+	
+You are currently at the pôle Delang. Place yourself so that the door is your right and take the corridor in front of you. Exceed the windows, then the yellow doors. Right after that take the corridor on your left. You can see stairs at the back of this corridor, take them and go up. Go through the little corridor. You are in the main hall of building A. Then take the corridor on your right direction building B. On your right you can see the forum. Leave building A and enter building B in front of you. On our left is the main hall.On our right you can see stairs and a big corridor. Do not take the stairs but take the corridor. Go trhough the big room and when you see pink stairs turn right, there will be the auitorium B2. Turn left and walk toward the green stairs. Before them on the left you can see the CRL.
+
+<form>
+	<input type="radio" name ="ques3c" value="3rep1c" checked> Answer 1
+	<input type="radio" name ="ques3c" value="3rep2c" > Answer 2
+	<input type="radio" name ="ques3c" value="3rep3c" > Answer 3
+	</form>
+	
+	
+	  <audio
+        controls
+        src="5.mp3">
+            Your browser does not support the
+            <code>audio</code> element.
+    </audio>
+	
+Now you are in front of the amphi B3. Take the green stairs on your left and go down one floor. Cross the hall until you  see the microwaves. Just next to them you will find a couple of steps,  take them. As you walk down the corridor you will see on your right the Angelier library.
+
+<form>
+	<input type="radio" name ="ques3c" value="3rep1c" checked> Answer 1
+	<input type="radio" name ="ques3c" value="3rep2c" > Answer 2
+	<input type="radio" name ="ques3c" value="3rep3c" > Answer 3
+	</form>
+	
+	  <audio
+        controls
+        src="6.mp3">
+            Your browser does not support the
+            <code>audio</code> element.
+    </audio>
+	
+Return back to the microwave and turn right. At the end of the corridor take the yellow stairs and go to the main floor (level B2). You are now on the forum.
+	
+<form>
+	<input type="radio" name ="ques3c" value="3rep1c" checked> Answer 1
+	<input type="radio" name ="ques3c" value="3rep2c" > Answer 2
+	<input type="radio" name ="ques3c" value="3rep3c" > Answer 3
+	</form>
+	
 <footer> Contact : englishhunt2019@gmail.com </footer>
 </boddy>
 </html>
