--- a/englishuntrules.html
+++ b/englishuntrules.html
@@ -10,52 +10,52 @@
 <p>Please follow the given rules and regulations to fully enjoy the English HUNT.</p>
 <ol>
 <li>
-<p>Open for University of Lille students only</p>
+<p>Open for University of Lille students only</p> <br />
 </li>
 <li>
-<p>Always carry your student ID anywhere you go</p>
+<p>Always carry your student ID anywhere you go</p> <br />
 </li>
 <li>
-<p>There is no time limit for the English Hunt but we advise you to do it within a day</p>
+<p>There is no time limit for the English Hunt but we advise you to do it within a day</p> <br />
 </li>
 <li>
-<p>English Hunt could be done individually or in a team </p>
+<p>English Hunt could be done individually or in a team </p> <br />
 </li>
 <li>
-<p>If you are doing it in a Team, please enter all the names of your teammates on the website</p>
+<p>If you are doing it in a Team, please enter all the names of your teammates on the website</p> <br />
 </li>
 <li>
-<p><Make sure that you answer the given questions ;)</p>
+<p><Make sure that you answer the given questions ;)</p> <br />
 </li>
 </ol>
 
 <ol>
 <li>
-<p>Please do not run on campus grounds. </p>
+<p>Please do not run on campus grounds. </p> <br />
 </li>
 <li>
-<p>Please be careful while crossing the road, or while entering crowded places</p>
+<p>Please be careful while crossing the road, or while entering crowded places</p> <br />
 </li>
 <li>
-<p>Please keep an eye on your personal belongings </p>
+<p>Please keep an eye on your personal belongings </p> <br />
 </li>
 <li>
-<p>Please follow the rules and regulations instructed at a museum</p>
+<p>Please follow the rules and regulations instructed at a museum</p> <br />
 </li>
 <li>
-<p>If you are going to a bar, please make sure you have your National ID and please forbid consuming alcohol if you are Under 18.</p>
+<p>If you are going to a bar, please make sure you have your National ID and please forbid consuming alcohol if you are Under 18.</p> <br />
 </li>
 <li>
-<p>Do not mix drinking and driving!</p>
+<p>Do not mix drinking and driving!</p> <br />
 </li>
 <li>
-<p>Please do not forget to use a valid transport ticket (by il&eacute;via) while travelling</p>
+<p>Please do not forget to use a valid transport ticket (by il&eacute;via) while travelling</p> <br />
 </li>
 <li>
-<p>When entering certain public places/ tourist places, you will have to buy a ticket, so please show them your student ID for discount rates.</p>
+<p>When entering certain public places/ tourist places, you will have to buy a ticket, so please show them your student ID for discount rates.</p> <br />
 </li>
 <li>
-<p>Please note that, all the museums in Lille are free to the public on the 1ST Sunday of each month and also, all the museums in Lille are free for residents in Lille, Hellemme and Lomme every Sunday (but you will have to show them proof with for ex a telephone bill, an EDF bill etc)</p>
+<p>Please note that, all the museums in Lille are free to the public on the 1ST Sunday of each month and also, all the museums in Lille are free for residents in Lille, Hellemme and Lomme every Sunday (but you will have to show them proof with for ex a telephone bill, an EDF bill etc)</p> <br />
 </li>
 </ol>
 <footer> Contact : englishhunt2019@gmail.com </footer>
