--- a/englishuntlille.html
+++ b/englishuntlille.html
@@ -7,10 +7,72 @@
 <body>
 <a href="englishuntmp.html">Home</a>
 <h1>You Chose Lille </h1>
-PLACEHOLDER FOR AUDIO GUIDE
-<p> Location : Grand place
-<p>Mission: Balba
-<p> <a href="ehformlille.html">Form here </a> 
+  <audio
+        controls
+        src="1.mp3">
+            Your browser does not support the
+            <code>bourseopera.mp3</code> element.
+    </audio> 
+	
+	  <audio
+        controls
+        src="fontainebourse.mp3">
+            Your browser does not support the
+            <code>audio</code> element.
+    </audio> 
+
+	  <audio
+        controls
+        src="garems.mp3">
+            Your browser does not support the
+            <code>audio</code> element.
+    </audio> 
+	
+	  <audio
+        controls
+        src="guyscine.mp3">
+            Your browser does not support the
+            <code>audio</code> element.
+    </audio> 
+	
+	
+	  <audio
+        controls
+        src="mslibrairie.mp3">
+            Your browser does not support the
+            <code>audio</code> element.
+    </audio> 
+	
+
+  <audio
+        controls
+        src="placetheatre.mp3">
+            Your browser does not support the
+            <code>audio</code> element.
+    </audio> 
+
+  <audio
+        controls
+        src="theatrefontaine.mp3">
+            Your browser does not support the
+            <code>audio</code> element.
+    </audio> 
+
+
+  <audio
+        controls
+        src="ugcplace.mp3">
+            Your browser does not support the
+            <code>audio</code> element.
+    </audio> 
+
+  <audio
+        controls
+        src="voguys.mp3">
+            Your browser does not support the
+            <code>audio</code> element.
+    </audio> 
+
 <footer> Contact : englishhunt2019@gmail.com </footer>
 </boddy>
 </html>
