--- a/englishuntcampus.html
+++ b/englishuntcampus.html
@@ -18,7 +18,12 @@
 <br/>
 You have currently crossed the bridge and you are on campus. You can see the BU on your right. Once you enter the building take the stairs on your right and go to the second floor. When you exit the stairs,  turn left and then right. At the back of the BU you will find many ressources in English.
 <br/>
-
+<form>  What are the opening hours of the BU on the Friday ?<br/>
+	<input type="radio" name ="ques3c" value="3rep1c" checked> 8h-20h
+	<input type="radio" name ="ques3c" value="3rep2c" > 8h-19h
+	<input type="radio" name ="ques3c" value="3rep3c" > 9h-21h
+	<br/>
+	
 	  <audio
         controls
         src="2.mp3">
@@ -28,6 +33,11 @@ You have currently crossed the bridge and you are on campus. You can see the BU 
 <br/>
 Now you are currently outside the main library. On to your right, you can see an A on the building. Just before entering this building take the doors on to your left , and then, once you enter the building, you will see the Kino, which is the campus cinema . Then turn left and at the end of this hall there will be yellow  stairs. Go to the second floor. You will arrive in A4. When you leave the stairs turn right. At the end of the corridor you will find the association Ulysse (room A4.095)
 <br/>
+ What are the objectives of this association ?
+	<br/>
+	<input type="radio" name ="ques3c" value="3rep1c" checked> welcome foreign students
+	<input type="radio" name ="ques3c" value="3rep2c" > inform foreign students
+	<input type="radio" name ="ques3c" value="3rep3c" > help foreign students to integrate
 
 	<br/>
 	  <audio
@@ -39,8 +49,15 @@ Now you are currently outside the main library. On to your right, you can see an
 <br/>	
 You are currently in front of Ulysse, take the corridor on your right then turn left. At the end of the corridor, take the pink stairs and go down to level A1. Once you are below the stairs take the perpendicular corridor on your right. Exceed the long corridor with all the windows and the yellow doors and take the second intersection, which is marked by a little white sign with the wifi symbol on the right hand corner. At this intersection, take the corridor on the left. The pôle Delang is the 6th doors on your right.
 <br/>	
-
-
+ Tick the languages that you can learn with the pole DELANG :
+<br/>
+	<input type="checkbox" name ="ques3c" value="3rep1c" checked> Danish
+	<input type="checkbox" name ="ques3c" value="3rep2c" > Hungarian
+	<input type="checkbox" name ="ques3c" value="3rep3c" > Russian
+	<input type="checkbox" name ="ques3c" value="3rep3c" > Japanese
+	<input type="checkbox" name ="ques3c" value="3rep3c" > Hebrew
+	<input type="checkbox" name ="ques3c" value="3rep3c" > Latin
+<br/>
 	
 	  <audio
         controls
@@ -51,6 +68,11 @@ You are currently in front of Ulysse, take the corridor on your right then turn 
 <br/>	
 You are currently at the pôle Delang. Place yourself so that the door is your right and take the corridor in front of you. Exceed the windows, then the yellow doors. Right after that take the corridor on your left. You can see stairs at the back of this corridor, take them and go up. Go through the little corridor. You are in the main hall of building A. Then take the corridor on your right direction building B. On your right you can see the forum. Leave building A and enter building B in front of you. On our left is the main hall.On our right you can see stairs and a big corridor. Do not take the stairs but take the corridor. Go trhough the big room and when you see pink stairs turn right, there will be the auitorium B2. Turn left and walk toward the green stairs. Before them on the left you can see the CRL.
 <br/>
+In how many languages does the CRL have ressources ?
+	<br/>
+	<input type="radio" name ="ques3c" value="3rep1c" checked> 15
+	<input type="radio" name ="ques3c" value="3rep2c" > 21
+	<input type="radio" name ="ques3c" value="3rep3c" > 27
 
 	<br/>
 	
@@ -63,7 +85,12 @@ You are currently at the pôle Delang. Place yourself so that the door is your r
 <br/>	
 Now you are in front of the amphi B3. Take the green stairs on your left and go down one floor. Cross the hall until you  see the microwaves. Just next to them you will find a couple of steps,  take them. As you walk down the corridor you will see on your right the Angelier library.
 <br/>
-
+Give the name of one level test that you can take at the CRL : 
+	<br/>
+	<input type="radio" name ="ques3c" value="3rep1c" checked> Elao
+	<input type="radio" name ="ques3c" value="3rep2c" > Self
+	<input type="radio" name ="ques3c" value="3rep3c" > Dialang
+	
 	<br/>
 	  <audio
         controls
@@ -74,113 +101,15 @@ Now you are in front of the amphi B3. Take the green stairs on your left and go 
 <br/>	
 Return back to the microwave and turn right. At the end of the corridor take the yellow stairs and go to the main floor (level B2). You are now on the forum.
 <br/>	
+What is the condition to borrow a ressource ?
+	<br/>
 
-	
-(function() {
-  function buildQuiz() {
-    // we'll need a place to store the HTML output
-    const output = [];
-
-    // for each question...
-    myQuestions.forEach((currentQuestion, questionNumber) => {
-      // we'll want to store the list of answer choices
-      const answers = [];
-
-      // and for each available answer...
-      for (letter in currentQuestion.answers) {
-        // ...add an HTML radio button
-        answers.push(
-          `<label>
-            <input type="radio" name="question${questionNumber}" value="${letter}">
-            ${letter} :
-            ${currentQuestion.answers[letter]}
-          </label>`
-        );
-      }
-
-      // add this question and its answers to the output
-      output.push(
-        `<div class="question"> ${currentQuestion.question} </div>
-        <div class="answers"> ${answers.join("")} </div>`
-      );
-    });
-
-    // finally combine our output list into one string of HTML and put it on the page
-    quizContainer.innerHTML = output.join("");
-  }
-
-  function showResults() {
-    // gather answer containers from our quiz
-    const answerContainers = quizContainer.querySelectorAll(".answers");
-
-    // keep track of user's answers
-    let numCorrect = 0;
-
-    // for each question...
-    myQuestions.forEach((currentQuestion, questionNumber) => {
-      // find selected answer
-      const answerContainer = answerContainers[questionNumber];
-      const selector = `input[name=question${questionNumber}]:checked`;
-      const userAnswer = (answerContainer.querySelector(selector) || {}).value;
-
-      // if answer is correct
-      if (userAnswer === currentQuestion.correctAnswer) {
-        // add to the number of correct answers
-        numCorrect++;
-
-        // color the answers green
-        answerContainers[questionNumber].style.color = "lightgreen";
-      } else {
-        // if answer is wrong or blank
-        // color the answers red
-        answerContainers[questionNumber].style.color = "red";
-      }
-    });
-
-    // show number of correct answers out of total
-    resultsContainer.innerHTML = `${numCorrect} out of ${myQuestions.length}`;
-  }
-
-  const quizContainer = document.getElementById("quiz");
-  const resultsContainer = document.getElementById("results");
-  const submitButton = document.getElementById("submit");
-  const myQuestions = [
-    {
-      question: "Who is the strongest?",
-      answers: {
-        a: "Superman",
-        b: "The Terminator",
-        c: "Waluigi, obviously"
-      },
-      correctAnswer: "c"
-    },
-    {
-      question: "What is the best site ever created?",
-      answers: {
-        a: "SitePoint",
-        b: "Simple Steps Code",
-        c: "Trick question; they're both the best"
-      },
-      correctAnswer: "c"
-    },
-    {
-      question: "Where is Waldo really?",
-      answers: {
-        a: "Antarctica",
-        b: "Exploring the Pacific Ocean",
-        c: "Sitting in a tree",
-        d: "Minding his own business, so stop asking"
-      },
-      correctAnswer: "d"
-    }
-  ];
-
-  // display quiz right away
-  buildQuiz();
-
-  // on submit, show results
-  submitButton.addEventListener("click", showResults);
-})();
+	<input type="radio" name ="ques3c" value="3rep1c" checked> to study on campus pont de bois
+	<input type="radio" name ="ques3c" value="3rep2c" > To take out a subscription
+	<input type="radio" name ="ques3c" value="3rep3c" > To have the multiple service card of Lille
+	<input type="submit" value="submit">
+	</form>
+	<br/>
 <footer> Contact : englishhunt2019@gmail.com </footer>
 </boddy>
 </html>
